--- a/report/document.tex
+++ b/report/document.tex
@@ -16,6 +16,7 @@
 %\usepackage{pscyr}
 %\usepackage{txfonts}
 \usepackage{longtable}
+\usepackage{listings}
 \linespread{1.15} % полуторный интервал
 %\renewcommand{\rmdefault}{ftm} % Times New Roman
 \frenchspacing
@@ -37,27 +38,6 @@
 %Отступы
 \usepackage{titlesec}
 
-\titleformat{\chapter}[display]
-{\filcenter}
-{\MakeUppercase{\chaptertitlename} \thechapter}
-{8pt}
-{\bfseries}{}
-
-\titleformat{\section}
-{\normalsize\bfseries}
-{\thesection}
-{1em}{}
-
-\titleformat{\subsection}
-{\normalsize\bfseries}
-{\thesubsection}
-{1em}{}
-
-% Настройка вертикальных и горизонтальных отступов
-\titlespacing*{\chapter}{0pt}{-10pt}{5pt}
-\titlespacing*{\section}{\parindent}{*3}{*1}
-\titlespacing*{\subsection}{\parindent}{*3}{*1}
-
 %Списки
 \usepackage{enumitem}
 \makeatletter
@@ -68,33 +48,7 @@
 \renewcommand{\labelenumi}{\asbuk{enumi})}
 \renewcommand{\labelenumii}{\arabic{enumii})}
 
-%Оглавление
-\usepackage{tocloft}
-\renewcommand{\cfttoctitlefont}{\hspace{0.38\textwidth} \bfseries\MakeUppercase}
-\renewcommand{\cftbeforetoctitleskip}{-1em}
-\renewcommand{\cftaftertoctitle}{\mbox{}\hfill \\ \mbox{}\hfill{\footnotesize Стр.}\vspace{-2.5em}}
-\renewcommand{\cftchapfont}{\normalsize\bfseries \MakeUppercase{\chaptername} }
-\renewcommand{\cftsecfont}{\hspace{31pt}}
-\renewcommand{\cftsubsecfont}{\hspace{11pt}}
-\renewcommand{\cftbeforechapskip}{1em}
-\renewcommand{\cftparskip}{-1mm}
-\renewcommand{\cftdotsep}{1}
-\setcounter{tocdepth}{2} % задать глубину оглавления — до subsection включительно
 
-\newcommand{\empline}{\mbox{}\newline}
-\newcommand{\likechapterheading}[1]{ 
-	\begin{center}
-		\textbf{\MakeUppercase{#1}}
-	\end{center}
-	\empline}
-
-\makeatletter
-\renewcommand{\@dotsep}{2}
-\newcommand{\l@likechapter}[2]{{\bfseries\@dottedtocline{0}{5pt}{5pt}{#1}{#2}}}
-\makeatother
-\newcommand{\likechapter}[1]{    
-	\likechapterheading{#1}    
-	\addcontentsline{toc}{likechapter}{\MakeUppercase{#1}}}
 
 
 \begin{document}
@@ -128,7 +82,7 @@
 	\newpage
 	\tableofcontents
 	
-	\chapter{Лабораторная работа № 1}
+	\chapter{ЛАБОРАТОРНАЯ РАБОТА № 1}
 	\section{Тема работы. Цель работы. Порядок выполнения работы}
 	\textbf{Тема:} решение краевых задач математической физики методом конечных разностей.
 	
@@ -356,9 +310,9 @@
 		\end{array}\right.
 	\end{equation}
 	Перепишем первое уравнение этой схемы в виде, удобном для решения дискретной задачи:
-	\begin{equation*}
+	\begin{equation}\label{TridiagonalEquationOne}
 		Au^k_{i-1} + Bu^k_i + Cu^k_{i+1} = Du_i^{k-1} + E
-	\end{equation*}
+	\end{equation}
 	Опуская промежуточные выкладки, запишем значения коэффициентов $A$, $B$, $C$, $D$, $E$, $F$:
 	\begin{equation*}
 		A = -\dfrac{\strut k h_t}{\strut 2ich_r^2} + \dfrac{\strut k h_t}{\strut c h_r^2}
@@ -377,9 +331,9 @@
 	\end{equation*}
 	
 	Аналогично представим второе уравнение этой системы и коэффициенты $F$, $G$, $H$:
-	\begin{equation*}
+	\begin{equation}\label{TridiagonalEquationTwo}
 		Fu_0^k + Gu_1^{k} = Ju_0^{k-1} + L
-	\end{equation*}
+	\end{equation}
 	\begin{equation*}
 		F = 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl}
 	\end{equation*}
@@ -425,7 +379,7 @@
  	\dfrac{u_i^{k}-u_i^{k-1}}{h_t} - a^2\left(\dfrac{1}{ih_r}\dfrac{u_{i+1}^k - u_{i-1}^k}{2h_r} +\dfrac{u_{i+1}^k - 2u_i^k + u_{i-1}^k}{h^2_r}\right) + \dfrac{\alpha}{cl}u_i^k \\
  	\dfrac{u_0^{k}-u_0^{k-1}}{h_t} - 2a^2\dfrac{u_1^k-u_0^k}{h_r^2} + \dfrac{\alpha}{cl}u_0^k\\
  	u_i^0 \\
- 	u_N^k \\
+ 	u_I^k \\
  	\end{array}\right\}
  	\end{equation}
  	\paragraph{Определение порядка аппроксимации.} Рассмотрим первый компонент вектора невязки
@@ -476,11 +430,11 @@
  	
  	\paragraph{Исследование устойчивости.} Для исследования устойчивости воспользуемся определением нормы в пространствах $U_h$ и $F_h$:
  	\begin{equation*}
- 		\lvert\lvert u_h \rvert\rvert_{U_h} = \max\limits_{i=\overline{0,N-1}, k=\overline{1,K}} {\vert u_i^k \vert}
+ 		\lvert\lvert u_h \rvert\rvert_{U_h} = \max\limits_{i=\overline{0,I-1}, k=\overline{1,K}} {\vert u_i^k \vert}
  	\end{equation*}
  	
  	\begin{equation*}
- 		\lvert\lvert f_h \rvert\rvert_{F_h} = \max\left\{\max\limits_{i=\overline{0, N-1}}\vert \psi_i \vert, u_c, u_b \right\}
+ 		\lvert\lvert f_h \rvert\rvert_{F_h} = \max\left\{\max\limits_{i=\overline{0, I-1}}\vert \psi_i \vert, u_c, u_b \right\}
  	\end{equation*}
  	
  	\begin{equation*}
@@ -510,23 +464,23 @@
 	\begin{equation}
 		\left\{
 		\begin{array}{l}
-			\vert u_i^k \vert \leq \max\left\{\max\limits_{l = \overline{0, N-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\}, i =\overline{1, N}, k = \overline{1, K} \\
-			\vert u_i^{k-1} \vert \leq \max\left\{\max\limits_{l = \overline{1, N-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\}, i =\overline{1, N}, k = \overline{1, K} \\
-			\lvert u_c \rvert \leq \vert\vert f_h \vert\vert_{F_h}, i = \overline{1, N-1}, k = \overline{1,K}
+			\vert u_i^k \vert \leq \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\}, i =\overline{1, I}, k = \overline{1, K} \\
+			\vert u_i^{k-1} \vert \leq \max\left\{\max\limits_{l = \overline{1, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\}, i =\overline{1, I}, k = \overline{1, K} \\
+			\lvert u_c \rvert \leq \vert\vert f_h \vert\vert_{F_h}, i = \overline{1, I-1}, k = \overline{1,K}
 		\end{array}
 		\right.
 	\end{equation}
 	\begin{align}
-		& \left(  1 + \dfrac{\strut 2 k h_t}{\strut h_r^2} + \dfrac{\strut 2 \alpha h_t}{\strut cl} \right)\lvert u^k_i \rvert \leq \left( \dfrac{\strut k h_t}{\strut 2ich_r^2} + \dfrac{\strut k h_t}{\strut c h_r^2} \right)\max\left\{\max\limits_{l = \overline{0, N-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\ 
-		& + \left(-\dfrac{\strut k h_t}{\strut 2ich_r^2} + \dfrac{\strut k h_t}{\strut c h_r^2}\right) \max\left\{\max\limits_{l = \overline{0, N-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \max\left\{\max\limits_{l = \overline{1, N-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl}\lvert \lvert f_h \rvert\rvert_{F_h} 	\nonumber	
+		& \left(  1 + \dfrac{\strut 2 k h_t}{\strut h_r^2} + \dfrac{\strut 2 \alpha h_t}{\strut cl} \right)\lvert u^k_i \rvert \leq \left( \dfrac{\strut k h_t}{\strut 2ich_r^2} + \dfrac{\strut k h_t}{\strut c h_r^2} \right)\max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\ 
+		& + \left(-\dfrac{\strut k h_t}{\strut 2ich_r^2} + \dfrac{\strut k h_t}{\strut c h_r^2}\right) \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \max\left\{\max\limits_{l = \overline{1, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl}\lvert \lvert f_h \rvert\rvert_{F_h} 	\nonumber	
 	\end{align}
 	\begin{align}
-		& \left(  1 + \dfrac{\strut 2 k h_t}{\strut h_r^2} + \dfrac{\strut 2 \alpha h_t}{\strut cl} \right)\lvert u^k_i \rvert \leq \dfrac{\strut 2 k h_t}{\strut ch_r^2} \max\left\{\max\limits_{l = \overline{0, N-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl}\lvert \lvert f_h \rvert\rvert_{F_h} + \nonumber \\
-		& + \max\left\{\max\limits_{l = \overline{1, N-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} \nonumber
+		& \left(  1 + \dfrac{\strut 2 k h_t}{\strut h_r^2} + \dfrac{\strut 2 \alpha h_t}{\strut cl} \right)\lvert u^k_i \rvert \leq \dfrac{\strut 2 k h_t}{\strut ch_r^2} \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl}\lvert \lvert f_h \rvert\rvert_{F_h} + \nonumber \\
+		& + \max\left\{\max\limits_{l = \overline{1, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} \nonumber
 	\end{align}
 	\begin{align}
-		& \left(  1 + \dfrac{\strut 2 k h_t}{\strut h_r^2} + \dfrac{\strut 2 \alpha h_t}{\strut cl} \right) \max\limits_{i=\overline{0, N-1}} \lvert u^k_i \rvert \leq \dfrac{\strut 2 k h_t}{\strut ch_r^2} \max\left\{\max\limits_{l = \overline{0, N-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\ 
-		& + \dfrac{\strut 2\alpha h_t}{\strut cl}\lvert \lvert f_h \rvert\rvert_{F_h} + \max\left\{\max\limits_{l = \overline{1, N-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\}
+		& \left(  1 + \dfrac{\strut 2 k h_t}{\strut h_r^2} + \dfrac{\strut 2 \alpha h_t}{\strut cl} \right) \max\limits_{i=\overline{0, I-1}} \lvert u^k_i \rvert \leq \dfrac{\strut 2 k h_t}{\strut ch_r^2} \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\ 
+		& + \dfrac{\strut 2\alpha h_t}{\strut cl}\lvert \lvert f_h \rvert\rvert_{F_h} + \max\left\{\max\limits_{l = \overline{1, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} \nonumber
 	\end{align}	
 	
 	Аналогичным образом рассмотрим второе уравнение системы:
@@ -536,17 +490,179 @@
 	\begin{align}
 		\left( 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)\lvert u_0^k \rvert \leq \left(\dfrac{\strut 4kh_t}{\strut ch_r^2}\right) \lvert u_1^{k} \rvert + \lvert u_0^{k-1} \rvert + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert u_c \rvert \nonumber
 	\end{align}
-	\begin{align}
-		& \left( 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)\lvert u_0^k \rvert \leq \left(\dfrac{\strut 4kh_t}{\strut ch_r^2}\right) \max\left\{\max\limits_{l = \overline{0, N-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\
-		& + \max\left\{\max\limits_{l = \overline{1, N-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\begin{align}\label{StabilitySecond}
+		& \left( 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)\lvert u_0^k \rvert \leq \left(\dfrac{\strut 4kh_t}{\strut ch_r^2}\right) \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\
+		& + \max\left\{\max\limits_{l = \overline{1, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h}
 	\end{align}
 	\begin{align}
-		& \left( 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)\max\limits_{i=\overline{0,i}}\lvert u^k_i\rvert \leq \left(\dfrac{\strut 4kh_t}{\strut ch_r^2}\right) \max\left\{\max\limits_{l = \overline{0, N-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\
-		& + \max\left\{\max\limits_{l = \overline{1, N-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+		\dfrac{\strut 2kh_t}{\strut ch_r^2}\max\limits_{i = \overline{1, I-1}} \vert u_i^k \vert \leq \dfrac{\strut 2kh_t}{ch_r^2} \max{\left\{ \max\limits_{l = \overline{0, I-1}} \lvert u_l^k \rvert, \lvert u_b \rvert \right\}} \nonumber
 	\end{align}
-	\chapter{Лабораторная работа №2}
-	\section{Тема работы. Цель работы. Порядок выполнения работы}
-	\section{Описание этапов выполнения лабораторной работы}
-	\subsection{Описание тестовой задачи, ее аналитическое решение}
-	\subsection{Экспериментальное исследование фактической скорости сходимости сеточного решения к точному для тестовой задачи}
+	\begin{align}\label{StabilityFirst}
+		& \left(  1 + \dfrac{\strut 4 k h_t}{\strut h_r^2} + \dfrac{\strut 2 \alpha h_t}{\strut cl} \right) \max\limits_{i=\overline{1, I-1}} \lvert u^k_i \rvert \leq \dfrac{\strut 4 k h_t}{\strut ch_r^2} \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\ 
+		& + \dfrac{\strut 2\alpha h_t}{\strut cl}\lvert \lvert f_h \rvert\rvert_{F_h} + \max\left\{\max\limits_{l = \overline{1, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\}
+	\end{align}
+	
+	Сравним выражения \eqref{StabilityFirst} и \eqref{StabilitySecond}
+	\begin{align}
+		& \left( 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)\max\limits_{i=\overline{0,I-1}}\lvert u^k_i\rvert \leq \left(\dfrac{\strut 4kh_t}{\strut ch_r^2}\right) \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\
+		& + \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\end{align}
+	\begin{align}
+		& \left( 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)
+		\lvert u_b \rvert \leq \left(\dfrac{\strut 4kh_t}{\strut ch_r^2}\right) \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\
+		& + \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\end{align}
+	\begin{align}
+		& \left( 1 + \dfrac{\strut 4kh_t}{\strut ch_r^2} + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)\max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} \leq \left(\dfrac{\strut 4kh_t}{\strut ch_r^2}\right) \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} + \nonumber \\
+		& + \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\end{align}
+	\begin{align}
+	& \left( 1 + \dfrac{\strut 2\alpha h_t}{\strut cl} \right)\max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^k \rvert, \lvert u_b \rvert \right\} \leq  \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\end{align}
+	\begin{align}
+		& \left( 1 + \dfrac{\strut 2\alpha h_t}{\strut cl} \right) \max\limits_{i=\overline{0,I-1}} \lvert u_i^k \rvert \leq  \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^{k-1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\end{align}
+	
+	Далее рассмотрим последнее выражение для различных временных слоев $k = \overline{1,K}$:
+	\begin{align}
+		& k =  1 \nonumber \\
+		& \left( 1 + \dfrac{\strut 2\alpha h_t}{\strut cl} \right) \max\limits_{i=\overline{0,I-1}} \lvert u_i^1 \rvert \leq  \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^{0} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber \\
+		& \max_{i=\overline{0, I-1}} \lvert u_i^1 \rvert \leq \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\end{align}
+	\begin{align}
+		& k =  2 \nonumber \\
+		& \left( 1 + \dfrac{\strut 2\alpha h_t}{\strut cl} \right) \max\limits_{i=\overline{0,I-1}} \lvert u_i^2 \rvert \leq  \max\left\{\max\limits_{l = \overline{0, I-1}}\lvert u_l^{1} \rvert, \lvert u_b \rvert \right\} + \dfrac{\strut 2\alpha h_t}{\strut cl} \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber \\
+		& \max_{i=\overline{0, I-1}} \lvert u_i^2 \rvert \leq \lvert\lvert f_h \rvert\rvert_{F_h} \nonumber
+	\end{align}
+	
+	Так далее, получим, что $\max\limits_{i=\overline{0,N-1}}\lvert u_i^k \rvert \leq \lvert \lvert f_h \rvert\rvert$. Таким образом неявная схема \eqref{ImplicitScheme} решения задачи Коши \eqref{KoshiTask} является безусловно устойчивой.
+	
+	\subsection{Описание алгоритма решения дискретной задачи}
+	Для решения дискретной задачи \eqref{ImplicitScheme} воспользуемся формой записи уравнений \eqref{TridiagonalEquationOne} и \eqref{TridiagonalEquationTwo}. Их удобно представить в матричном виде:
+	\begin{equation}\label{System}
+		\left(
+		\begin{array}{cccccccc}
+		F & G & 0 & 0 & \dots & 0 & 0 & 0 \\
+		A & B & C & 0 & \dots & 0 & 0 & 0 \\
+		0 & A & B & C & \dots & 0 & 0 & 0 \\
+		0 & 0 & A & B & \dots & 0 & 0 & 0 \\
+		\vdots & \vdots & \vdots & \vdots & \ddots & \vdots & \vdots & \vdots \\
+		0 & 0 & 0 & 0 & \dots & B & C & 0 \\		
+		0 & 0 & 0 & 0 & \dots & A & B & C \\			
+		0 & 0 & 0 & 0 & \dots & 0 & 0 & 1 \\		
+		\end{array}
+		\right) \left(
+		\begin{array}{c}
+			u_0^k \\
+			u_1^k \\
+			u_2^k \\
+			u_3^k \\
+			\vdots \\
+			u_{I-2}^k\\												
+			u_{I-1}^k\\
+			u_I^k \\		
+		\end{array}
+		\right) = \left ( 	
+		\begin{array}{c}
+		Ju_0^{k-1} + L \\
+		Du_1^{k-1} + E \\
+		Du_2^{k-1} + E \\
+		Du_3^{k-1} + E \\
+		\vdots \\
+		Du_{I-2}^{k-1} + E\\												
+		Du_{i-1}^{k-1} + E\\
+		u_B \\		
+		\end{array} \right)
+	\end{equation}
+	
+	Решение данной системы \eqref{System} проводится при помощи метода прогонки. Основные этапы решения можно представить как последовательность пунктов:
+	\begin{enumerate}
+		\item Заполнение основной матрицы коэффициентами $A, B, C, F, G$
+		\item Заполнение правой части системы \eqref{System} коэффициентами $J, L, D, E$, значение $u^0_i$ известно из начальных условий
+		\item Решение системы уравнений \eqref{System} для каждого временного слоя $k = \overline{1,K}$, при этом на каждом временном слое правая часть заполняется заново с учетом решения на предыдущей итерации
+	\end{enumerate}
+
+	Для решения использовалась интегрированная система разработки Qt версии 5.8.0 и компилятор MinGW версии 5.3. В качестве внешнего модуля использовалась стандартная библиотека C++ math.h для вычисления значения функции Бесселя и свободно распространяемая библиотека QCustomPlot для построения графиков.
+	
+	\newpage
+	\section{Результаты вычислительных экспериментов}
+	В результате численных экспериментов были получены графики. демонстрирующие сходимость решения неявной разностной схемы к точному решению при измельчении сетки.
+	\begin{figure}[h!]
+		\begin{center}
+		\includegraphics{img/10_10.PNG}
+\caption{Сравнение численного решения с аналитическим: 10240 разбиений по времени и 320 разбиений по пространству}
+		\end{center}
+	\end{figure}
+
+	\begin{figure}[h!]
+	\begin{center}
+		\includegraphics{img/40_20.PNG}
+\caption{Сравнение численного решения с аналитическим: 10240 разбиений по времени и 320 разбиений по пространству}
+	\end{center}
+	\end{figure}
+
+	\begin{figure}[h!]
+	\begin{center}
+		\includegraphics{img/160_40.PNG}
+\caption{Сравнение численного решения с аналитическим: 10240 разбиений по времени и 320 разбиений по пространству}
+	\end{center}
+	\end{figure}
+
+	\begin{figure}[h!]
+	\begin{center}
+		\includegraphics{img/640_80.PNG}
+\caption{Сравнение численного решения с аналитическим: 10240 разбиений по времени и 320 разбиений по пространству}
+	\end{center}
+	\end{figure}
+
+	\begin{figure}[h!]
+	\begin{center}
+		\includegraphics{img/2560_160.PNG}
+\caption{Сравнение численного решения с аналитическим: 10240 разбиений по времени и 320 разбиений по пространству}
+	\end{center}
+	\end{figure}
+
+	\begin{figure}[h]
+	\begin{center}
+	\includegraphics{img/10240_320.PNG}
+	\caption{Сравнение численного решения с аналитическим: 10240 разбиений по времени и 320 разбиений по пространству}
+	\end{center}
+	\end{figure}
+	\chapter{ЛАБОРАТОРНАЯ РАБОТА №2}
+	\section{Экспериментальное исследование фактической скорости сходимости сеточного решения к точному для тестовой задачи}
+	Как было ранее показано \eqref{ImplicitScheme} аппроксимирует задачу\eqref{KoshiTask} с ошибкой $O(h_t, h_r^2)$. Тогда на основании теоремы о сходимости можно заключить, что при уменьшении шага по времени в 4 раза, а по пространству в 2 раза, будет наблюдаться уменьшение погрешности в 4 раза. После проведения численного эксперимента это утверждение подтвердилось.
+	
+	\begin{table}[h!]
+		\centering
+		\caption{Результаты исследования фактической сходимости}
+		\begin{tabular}{|c|c|c|c|}
+			\hline
+			I & N & Относительная ошибка & Отношение \\
+			\hline
+			10 & 10 & $1.37224\cdot10^{-3}$  & 1 \\
+			\hline
+			20 & 40 & $3.39822\cdot10^{-4}$ & 4.038114071 \\
+			\hline
+			40 & 160 & $8.47762\cdot10^{-5}$ & 4.008459922 \\
+			\hline
+			80 & 640 & $2.12037\cdot10^{-5}$ & 3.998179563 \\
+			\hline
+			160 & 2560 & $5.30447\cdot10^{-6}$ & 3.997326783 \\
+ 			\hline
+			320 & 10240 & $1.32671\cdot10^{-6}$ & 3.998213626 \\
+			\hline
+		\end{tabular}
+	\end{table}
+	\addcontentsline{toc}{chapter}{Литература}
+	\begin{thebibliography}{2}
+		\bibitem{degtyryov} Дегтярев А. А., Решение задач математической физики методом конечных разностей, Самара, 2017
+	\end{thebibliography}
+	\chapter*{ПРИЛОЖЕНИЕ А}
+	\addcontentsline{toc}{chapter}{Приложение А}
+	\lstset{ language= C,
+		morekeywords={yield,var,get,set,from,select,partial},
+		breaklines=true,
+		basicstyle=\footnotesize\ttfamily}
+	\linespread{1} % вернем временно единичный межстрочный интервал
+	\lstinputlisting{mainwindow.cpp}
 \end{document}
